--- a/view/index.html
+++ b/view/index.html
@@ -20,12 +20,12 @@
 	<input
 		type="text""
 		name="Insert""
-		value="ignore_case">
+		value=document.getElementById("button").value>
 	<script for="list" event="onClick">
 	if (value == null)
 		alert("Please provide the valid input");
 	else
- 	   	document.write(ignore_case);
+ 	   	document.write(value);
 	</script>
     </body>
 </html>
