Revert "Update index.html"
This reverts commit 8818964202884d8ac6acb796b0ee7fafdc5a8938.

--- a/view/index.html
+++ b/view/index.html
@@ -20,12 +20,12 @@
 	<input
 		type="text""
 		name="Insert""
-		value=document.getElementById("button").value>
+		value="ignore_case">
 	<script for="list" event="onClick">
 	if (value == null)
 		alert("Please provide the valid input");
 	else
- 	   	document.write(value);
+ 	   	document.write(ignore_case);
 	</script>
     </body>
 </html>
