--- a/view/index.html
+++ b/view/index.html
@@ -7,25 +7,17 @@
         <!--You can load all the css files here -->
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
-    
+     <!--You can load all the javascript files here-->
+    <script type="text/javascript" src="js/script.js"></script>
     <body>
         <!--HTML content goes here-->
-         <ul id="list">
-         </ul>
+
          <input id="input" type="text"></input>
-         <button id="button">Insert</button>
-        
-        <!--You can load all the javascript files here-->
-        <script type="text/javascript" src="js/script.js"></script>
-	<input
-		type="text""
-		name="Insert""
-		value="ignore_case">
-	<script for="list" event="onClick">
-	if (value == null)
-		alert("Please provide the valid input");
-	else
- 	   	document.write(ignore_case);
-	</script>
+         <button id="button" onclick="inputList()">Insert</button>
+         <ul id="list">
+		
+         </ul>
+       
+	
     </body>
 </html>
